# rinha-de-backend-2026

./: .gitignore  Makefile  main.py  post-run.sh  pyproject.toml
docs/: sample-request.json
docs/br/: AVALIACAO.md
docs/en/: EVALUATION.md
participants/: IthaloPS.json  Johnny-Nascimento.json  anjovisk.json  d3vk1ng1337.json  ewertonlim.json  gogoncalves.json  jhon2c.json
src/api/: handlers.py  index.py  main.py  state.py
src/common/: __init__.py  normalization.py  payload.py  vector.py
test/: test.js
