[project]
name = "rinha-de-backend-2026"
version = "0.1.0"
description = "Submissão Python para a Rinha de Backend 2026 — detecção de fraude por busca vetorial"
requires-python = ">=3.12"

dependencies = [
    # HTTP: Litestar com ASGI puro (sem batteries-included que não usamos)
    "litestar>=2.13",

    # Serialização e validação: msgspec é o mais rápido do ecossistema
    "msgspec>=0.18",

    # Servidor ASGI: Granian é o estado da arte em performance
    "granian>=2.0",

    # NumPy: vetorização SIMD via BLAS para o k-NN
    "numpy>=2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# Selecionamos um conjunto pragmático: erros, warnings, imports, naming, simplificações.
# Não pegamos "ALL" pra não brigar com escolhas de performance no hot-path.
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (ordenação de imports)
    "N",   # pep8-naming
    "UP",  # pyupgrade (uso de features novas do Python)
    "B",   # bugbear (bugs comuns)
    "SIM", # simplificações
    "RUF", # regras específicas do ruff
]

[tool.ruff.lint.per-file-ignores]
# Hot path: permitir patterns "feios" se ajudarem performance
"src/api/handlers.py" = ["SIM"]
"src/api/index.py" = ["SIM"]

[tool.ruff.format]
quote-style = "double"
