[project]
name = "rinha-de-backend-2026"
version = "0.1.0"
description = "Submissão Python para a Rinha de Backend 2026 — detecção de fraude por busca vetorial"
requires-python = ">=3.12"

dependencies = [
    "litestar>=2.13",
    "msgspec>=0.18",
    "granian>=2.0",
    "numpy>=2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "httpx>=0.27",
    "pre-commit>=4.6.0",
]

# === Build / packaging ===
# Hatchling é o build backend padrão recomendado pelo PyPA.
# Declarar os pacotes faz com que `src/common`, `src/api`, `src/builder`
# fiquem importáveis como `common`, `api`, `builder` (sem o prefixo `src.`).
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/common", "src/api", "src/builder"]

# === Ruff ===
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # bugbear
    "SIM", # simplificações
    "RUF", # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
"src/api/handlers.py" = ["SIM"]
"src/api/index.py" = ["SIM"]

[tool.ruff.format]
quote-style = "double"
